--- a/xtreamingbox/package.json
+++ b/xtreamingbox/package.json
@@ -2,13 +2,14 @@
   "name": "xtreamingbox",
   "version": "0.1.0",
   "private": true,
-  "type":"module",
+  "type": "module",
   "main": "./index.js",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "g": "^2.0.1",
     "npm": "^9.6.7",
