--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "delayed-stream": "^1.0.0",
     "delegates": "^1.0.0",
